feat: sn curve loglog bokeh
